--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,8 @@
+/* // using node-style package resolution in a CSS file:  */
+@import "~normalize.css";
+@import "~@blueprintjs/core/lib/css/blueprint.css";
+@import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
